cargo_check_errors.txt
    Checking theus_core v3.0.22 (C:\Users\dohoang\projects\EmotionAgent\theus_framework)
error[E0432]: unresolved import `crate::structures::State`
 --> src\engine.rs:3:25
  |
3 | use crate::structures::{State, ContextError, OutboxMsg};
  |                         ^^^^^ no `State` in `structures`

error[E0412]: cannot find type `State` in this scope
  --> src\structures.rs:28:6
   |
28 | impl State {
   |      ^^^^^ not found in this scope

error[E0412]: cannot find type `MetaLogEntry` in this scope
  --> src\structures.rs:95:27
   |
95 |     fn meta(&self) -> Vec<MetaLogEntry> {
   |                           ^^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
28 | impl<MetaLogEntry> State {
   |     ++++++++++++++

error[E0433]: failed to resolve: use of undeclared type `State`
  --> src\structures.rs:28:6
   |
28 | impl State {
   |      ^^^^^ use of undeclared type `State`

error[E0412]: cannot find type `State` in this scope
   --> src\structures.rs:135:19
    |
135 |     pub state: Py<State>,
    |                   ^^^^^ not found in this scope

error[E0412]: cannot find type `State` in this scope
   --> src\structures.rs:147:22
    |
147 |     fn new(state: Py<State>, local: Py<PyDict>, tx: Option<Py<Transaction>>) -> Self {
    |                      ^^^^^ not found in this scope

error[E0412]: cannot find type `State` in module `structures`
  --> src\lib.rs:51:31
   |
51 |     m.add_class::<structures::State>()?;
   |                               ^^^^^ not found in `structures`

error[E0412]: cannot find type `MetaLogEntry` in module `structures`
  --> src\lib.rs:55:31
   |
55 |     m.add_class::<structures::MetaLogEntry>()?;
   |                               ^^^^^^^^^^^^ not found in `structures`

warning: unused import: `PyList`
 --> src\structures.rs:2:27
  |
2 | use pyo3::types::{PyDict, PyList};
  |                           ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `im::HashMap`
 --> src\structures.rs:5:5
  |
5 | use im::HashMap;
  |     ^^^^^^^^^^^

warning: unused import: `std::collections::VecDeque`
 --> src\structures.rs:7:5
  |
7 | use std::collections::VecDeque;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `SystemTime` and `UNIX_EPOCH`
 --> src\structures.rs:8:17
  |
8 | use std::time::{SystemTime, UNIX_EPOCH};
  |                 ^^^^^^^^^^  ^^^^^^^^^^

warning: unused import: `crate::signals::SignalHub`
 --> src\structures.rs:9:5
  |
9 | use crate::signals::SignalHub;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `CAP_READ`
 --> src\proxy.rs:3:20
  |
3 | use crate::zones::{CAP_READ, CAP_APPEND, CAP_UPDATE, CAP_DELETE};
  |                    ^^^^^^^^

error[E0034]: multiple applicable items in scope
  --> src\structures.rs:53:68
   |
53 |     fn domain_proxy(&self, py: Python, read_only: Option<bool>) -> PyResult<PyObject> {
   |                                                                    ^^^^^^^^ multiple `wrap` found
   |
   = note: candidate #1 is defined in an impl for the type `IntoPyObjectConverter<Result<T, E>>`
   = note: candidate #2 is defined in an impl for the type `IntoPyObjectConverter<T>`

error[E0308]: mismatched types
   --> src\guards.rs:148:54
    |
148 |                  let zone_physics = get_zone_physics(zone);
    |                                     ---------------- ^^^^ expected `&ContextZone`, found `ContextZone`
    |                                     |
    |                                     arguments to this function are incorrect
    |
note: function defined here
   --> src\zones.rs:34:8
    |
 34 | pub fn get_zone_physics(zone: &ContextZone) -> u8 {
    |        ^^^^^^^^^^^^^^^^ ------------------
help: consider borrowing here
    |
148 |                  let zone_physics = get_zone_physics(&zone);
    |                                                      +

error[E0308]: mismatched types
   --> src\guards.rs:170:45
    |
170 |         let zone_physics = get_zone_physics(zone);
    |                            ---------------- ^^^^ expected `&ContextZone`, found `ContextZone`
    |                            |
    |                            arguments to this function are incorrect
    |
note: function defined here
   --> src\zones.rs:34:8
    |
 34 | pub fn get_zone_physics(zone: &ContextZone) -> u8 {
    |        ^^^^^^^^^^^^^^^^ ------------------
help: consider borrowing here
    |
170 |         let zone_physics = get_zone_physics(&zone);
    |                                             +

Some errors have detailed explanations: E0034, E0308, E0412, E0432, E0433.
For more information about an error, try `rustc --explain E0034`.
warning: `theus_core` (lib) generated 6 warnings
error: could not compile `theus_core` (lib) due to 11 previous errors; 6 warnings emitted
